# Project

./: .env  app.py  database.txt  diet_model.pkl  fitness_data_1000_records.csv  fitness_diet_dataset.csv  gamification.py  main.py  model.pkl  pyproject.toml  requirements.txt  train_diet_model.py
static/css/: dashboard.css  styles.css
templates/: 1.html  add_meal.html  add_workout.html  auth.html  dashboard.html  diet.html  edit_workout.html  error.html  forgot_password.html  hydration_settings.html  meal_tracker.html  model.html  productsss.html  result.html  train_diet.html  workout_dashboard.html  workout_history.html
