[tool.poetry]
name = "project"
version = "0.1.0"
description = "Flask project with ML, MongoDB, MySQL, and OpenCV"
authors = ["Hari Kothapalli <harikothapalli314@gmail.com>"]
readme = "README.md"
packages = [{ include = "project" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Flask = "2.3.3"
flask-cors = "6.0.1"
Flask-Login = "0.6.3"
Flask-SQLAlchemy = "3.1.1"
Werkzeug = "3.0.4"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
click = "8.1.7"
gunicorn = "21.2.0"
numpy = "1.26.4"
pandas = "2.2.3"
matplotlib = "3.10.0"
seaborn = "0.13.2"
scikit-learn = "1.6.0"
joblib = "1.4.2"
scipy = "1.14.1"
pymongo = { version = "5.3.1", extras = ["srv"] }
dnspython = "3.2.3"
keras = "3.7.0"
opencv-python = "4.10.0.84"
opencv-contrib-python = "4.10.0.84"
mysqlclient = "2.2.4"
mysql-connector-python = "9.1.0"
python-dotenv = "1.0.0"
reportlab = "4.4.3"
regex = "2024.11.6"

[tool.poetry.dev-dependencies]
# Add dev dependencies here if needed

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
